# cfgmgr

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  pyproject.toml
.github/workflows/: standard.yml
cfgmgr/: client.py  devices.py  model.py  node.py  parameters.py  utils.py
cfgmgr/backends/: __init__.py  core.py  filestore.py
cfgmgr/tests/: test_test.py
conda-recipe/: meta.yaml
docs/source/: conf.py  index.rst
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
