[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]

[project]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

description = "Configuration manager for LCLS EPICS PVs and devices."
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "cfgmgr"
requires-python = ">=3.9"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "cfgmgr*",]
namespaces = false

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[project.license]
file = "LICENSE"

[project.scripts]
"cfgmgr" = "cfgmgr.bin.main:main"

[tool.setuptools_scm]
write_to = "cfgmgr/_version.py"

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"

[tool.pytest.ini_options]
addopts = "--cov=."

